--- a/templates/authors/author_detail.html
+++ b/templates/authors/author_detail.html
@@ -6,8 +6,9 @@ Home
 {% endblock page_name %}
 
 {% block content %}
-<div>
+<div class="flex flex-col items-center w-full pt-24 text-white">
   <h1>{{author.name}}</h1>
+  <img src="{{author.avator.file360.url}}" />
   <h3>{{author.description|safe}}</h3>
 </div>
 
