--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -20,12 +20,12 @@
     <div class="relative flex flex-col items-center justify-start col-span-1 overflow-hidden transition-transform duration-200 ease-in-out rounded-lg " style="width: 300px;height: 420px;">
       <div id="fontCard" class="flex flex-col items-start w-full h-full">
         <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
-          {% if product.image.content_type == "video/mp4" %}
-          <video autoplay muted loop poster="/media/{{product.image.thumnail}}" class="object-cover cursor-pointer " style="height: 300px;width: 300px;">
-            <source src="/media/{{product.image.file360}}" />
+          {% if product.image.content_type == "mp4" %}
+          <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer " style="height: 300px;width: 300px;">
+            <source src="{{product.image.file360.url}}" />
           </video>
-          {% elif product.image.content_type == "image/jpeg" or product.image.content_type == "image/gif" %}
-          <img src="/media/{{product.image.file360}}" style="height: 300px;width: 300px;" class="cursor-pointer " />
+          {% elif product.image.content_type == "jpeg" or product.image.content_type == "gif" %}
+          <img src="{{product.image.file360.url}}" style="height: 300px;width: 300px;" class="cursor-pointer " />
           {% endif %}
         </div>
         <div class="flex flex-col items-start w-full p-3 bg-gray-200" style="height: 120px;width: 300px;">
@@ -36,7 +36,7 @@
               <p class="text-xl font-bold">{{product.price}} ETH</p>
             </div>
             <div class="flex flex-col items-center cursor-pointer">
-              <img src="/media/{{product.author.avator.thumnail}}" style="width: 40px;height: 40px;" class="border-2 rounded-full border-primary" />
+              <img src="{{product.author.avator.thumnail.url}}" style="width: 40px;height: 40px;" class="border-2 rounded-full border-primary" />
               <p>{{product.author}}</p>
             </div>
           </div>
