--- a/templates/authors/author_list.html
+++ b/templates/authors/author_list.html
@@ -1,27 +1,62 @@
 {% extends 'base.html' %}
-{% block page_name %} home {% endblock page_name %}
+{% load static %}
+{% block page_name %} author {% endblock page_name %}
 {%block content %}
 
-<div class="flex flex-col items-center w-full pt-24 text-white">
-  {% for author in authors %}
-  <h1>{{author.name}}</h1>
-  <img src="{{author.avator.file360.url}}" />
-  <p>{{author.authDes}}</p>
-  <p>{{author.desTitle}}</p>
-  <p>{{author.description|safe}}</p>
-  {% endfor %}
+<div class="flex flex-col items-center w-full ">
+  <div class="flex flex-col items-center justify-center w-full pt-24 " style="background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 20%, rgba(0, 0, 0, 0.7) 50%,rgba(0, 0, 0, 0.8) 100%), url('{% static "img/loveBack.jpeg" %}') no-repeat center center; height:300px;">
+    <div class="flex flex-col items-center justify-center h-full">
+      <h2 class="text-6xl font-bold text-white ">K-NFT Authors</h2>
+      <p class="mt-6 text-xl text-slate500 font-extralight">
+        {{authors.count}} authors
+      </p>
+    </div>
+    <div class="flex flex-col items-center justify-center h-full w-full py-3 bg-slate700  rounded-lg px-3 -mb-12" style="max-width:1200px;height:100px;">
+      <form method='GET' class="grid grid-cols-3 gap-3 w-full ">
 
-  <h5>
-    {% if page_obj.has_previous %}
-    <a href="?page={{page_obj.previous_page_number}}">Previous</a>
+        <input type='text' name='q' value='{{ request.GET.q }}' class="w-full rounded-md px-3  col-span-2 " style="height: 40px;" placeholder="Search by name">
+
+        <button class="col-span-1 px-3 py-2 bg-slate500 w-full rounded-md cursor-pointer" style="height: 40px;"><i class="bi bi-search"></i></button>
+
+      </form>
+    </div>
+  </div>
+  <section style="max-width:1200px;">
+
+    {% if authors.count > 0 %}
+    <div class="grid w-full grid-cols-5 gap-24 mt-24">
+      {% for author in authors %}
+      <a href="/author/{{author.id}}" class="bg-white rounded-md overflow-hidden">
+        <img src="{{author.avator.file360.url}}" />
+        <div class="p-3 bg-gray-200 w-full">
+          <h2 class="text-2xl font-bold">{{author.name}}</h2>
+          <p>{{author.authDes}}</p>
+        </div>
+      </a>
+      {% endfor %}
+      <div class="col-span-5 flex flex-col items-center pb-12 text-white">
+        {% if page_obj.has_previous %}
+        <a href="?page={{page_obj.previous_page_number}}">Previous</a>
+        {% endif %}
+        <p>
+          Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
+        </p>
+
+        {% if page_obj.has_next  %}
+        <a href="?page={{page_obj.next_page_number}}">Next</a>
+        {% endif %}
+      </div>
+    </div>
+    {% else %}
+    <div class="col-span-5 flex flex-col items-center justify-center " style="min-height: 500px;">
+      <p class="text-primary">검색 결과가 없습니다.</p>
+    </div>
     {% endif %}
 
-    Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
+  </section>
 
-    {% if page_obj.has_next  %}
-    <a href="?page={{page_obj.next_page_number}}">Next</a>
-    {% endif %}
-  </h5>
+
+
 
 </div>
 {% endblock content %}
