--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -12,7 +12,7 @@
         <video autoplay muted loop poster="{{product.image.thumnail.url}}">
           <source src="{{product.image.file800.url}}" />
         </video>
-        {% elif product.image.content_type == "jpeg" or product.image.content_type == "gif" %}
+        {% else %}
         <img src="{{product.image.file800.url}}" />
         {% endif %}
       </div>
@@ -47,9 +47,9 @@
               <p style="width: 100px;">tags</p>
               <div class="flex flex-row flex-wrap items-center flex-1">
                 {% for tag in product.tags.all %}
-                <span class="mr-3">
-                  {{tag.name}}
-                </span>
+                <a href="{% url 'products:tagSearch' tag=tag.id %}" class="mr-3 hover:text-primary">
+                  #{{tag.name}}
+                </a>
                 {% endfor %}
               </div>
             </div>
@@ -68,11 +68,11 @@
         <ul class="w-full splide__list">
           {% for otherProduct in otherProducts %}
           <li class="splide__slide">
-            {% if otherProduct.image.content_type == "video/mp4" %}
+            {% if otherProduct.image.content_type == "mp4" %}
             <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer " style="height: 300px;width: 300px;">
               <source src="{{otherProduct.image.file360.url}}" />
             </video>
-            {% elif otherProduct.image.content_type == "image/jpeg" or otherProduct.image.content_type == "image/gif" %}
+            {% else %}
             <img src="{{otherProduct.image.file360.url}}" style="height: 300px;width: 300px;" class="cursor-pointer " />
             {% endif %}
           </li>
