--- a/templates/authors/author_detail.html
+++ b/templates/authors/author_detail.html
@@ -36,7 +36,7 @@
   }
 
   .tab-content.current {
-    display: inherit;
+    display: grid;
   }
 </style>
 <div class="flex flex-col items-center w-full min-h-screen ">
