--- a/templates/authors/author_detail.html
+++ b/templates/authors/author_detail.html
@@ -92,9 +92,9 @@
         <li class="tab-link text-white" data-tab="tab-3">Others</li>
 
       </ul>
-      <div id="tab-1" class="tab-content current grid w-full grid-cols-4 gap-24">
+      <div id="tab-1" class="tab-content current grid w-full grid-cols-3 gap-24">
         {% for project in projects  %}
-        <a href="/product/{{project.id}}" class="relative flex flex-col items-center justify-start col-span-1 overflow-hidden  rounded-lg " style="width:200px;height: 320px;">
+        <a href="/product/{{project.id}}" class="relative flex flex-col items-center justify-start col-span-1 overflow-hidden  rounded-lg " style="height: 320px;">
           <div id="fontCard" class="flex flex-col items-start w-full h-full">
             <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
               {% if project.image.content_type == "mp4" %}
