--- a/templates/authors/author_detail.html
+++ b/templates/authors/author_detail.html
@@ -102,10 +102,10 @@
                 <source src="{{project.image.file360.url}}" />
               </video>
               {% else %}
-              <img src="{{project.image.file360.url}}" style="height: 220px;" class="cursor-pointer w-full" />
+              <img src="{{project.image.file360.url}}" style="height: 220px;" class="cursor-pointer " />
               {% endif %}
             </div>
-            <div class="flex flex-col items-start w-full p-3 bg-gray-200" style="height: 120px;width: 300px;">
+            <div class="flex flex-col items-start w-full p-3 bg-gray-200" style="height: 120px;">
               <p class="text-xl font-bold line-clamp-1">{{project.title}}</p>
               <div class="flex flex-row items-end justify-between w-full">
                 <div class="flex flex-col items-start">
