--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -56,7 +56,10 @@
         <a href="mailto:info@k-nft.io" class="mt-3">
           <p class="text-secondary">info@k-nft.io</p>
         </a>
-        <a href="/admin" class="px-3 py-2 mt-3 text-xs text-black rounded-full bg-slate500 hover:bg-opacity-50">
+        <a href="/license" class=" mt-3  text-slate500  hover:text-primary">
+          NFT licensing
+        </a>
+        <a href="/admin" class="mt-3  text-slate500  hover:text-primary">
           ADMIN
         </a>
         <p class="mt-3 font-light text-slate-400">
