--- a/templates/authors/author_list.html
+++ b/templates/authors/author_list.html
@@ -17,7 +17,7 @@
         <button class="col-span-1 px-3 py-2 bg-slate500 w-full rounded-md cursor-pointer" style="height: 40px;"><i class="bi bi-search"></i></button>
       </form>
     </div>
-  </div>a
+  </div>
   <section style="max-width:1200px;" class="mt-24">
 
     {% if authors.count > 0 %}
