--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -11,7 +11,7 @@
         <a href="{% url "authors:list" %}" class=" hover:text-primary">AUTHOR</a>
       </li>
       <li class="ml-6">
-        <a href="{% url "products:search" %}" class=" hover:text-primary">COLLECTION</a>
+        <a href="{% url "products:productList" %}" class=" hover:text-primary">COLLECTION</a>
       </li>
       <li class="ml-6">
         <a href="{% url "cores:about" %}" class=" hover:text-primary">ABOUT</a>
