--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -3,72 +3,165 @@
 {% block page_name %} collection {% endblock page_name %}
 
 {%block content %}
+<style>
+  .box-radio-input input[type="radio"] {
+    display: none;
+  }
+
+  .box-radio-input input[type="radio"]+span {
+    display: inline-block;
+    background: #64748B;
+    width: 100%;
+    line-height: 40px;
+    flex: 1;
+    text-align: center;
+
+
+    cursor: pointer;
+  }
+
+  .box-radio-input input[type="radio"]:checked+span {
+    background: #F5C226;
+    color: #fff;
+  }
+</style>
 <div class="flex flex-col items-center w-full ">
-  <div class="flex flex-col items-center justify-center w-full pt-24 pb-12" style="background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 20%, rgba(0, 0, 0, 0.7) 50%,rgba(0, 0, 0, 0.8) 100%), url('{% static "img/loveBack.jpeg" %}') no-repeat center center; height:300px;">
+  <div class="flex flex-col items-center justify-center w-full pt-24 " style="background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 20%, rgba(0, 0, 0, 0.7) 50%,rgba(0, 0, 0, 0.8) 100%), url('{% static "img/loveBack.jpeg" %}') no-repeat center center; height:300px;">
     <div class="flex flex-col items-center justify-center h-full">
       <h2 class="text-6xl font-bold text-white ">K-NFT Art Gallery</h2>
       <p class="mt-6 text-xl text-slate500 font-extralight">
         {{products.count}} works
       </p>
     </div>
-    <div class="py-12 bg-white">
-      <form method="get" action="{% url "products:search" %}">
+    <div class="flex flex-col items-center justify-center h-full w-full py-3 bg-slate700 rounded-lg px-3 -mb-12" style="max-width:1200px;height:100px;">
+      <form name="myForm" method="GET" action="{% url "products:productList" %}" class="grid grid-cols-9 gap-3 w-full ">
+        <div class=" flex flex-col items-start col-span-2 ">
+          <label for=" title" class="text-slate500">title</label>
+          <input value="{{form.title}}" id="title" name="title" placeholder="Search By Title" class="text-balck bg-slate500  rounded-md w-full px-2 py-2 " style="height: 40px;" />
+        </div>
+        <div class="flex flex-col items-start  col-span-2 ">
+          <label for="type" class="text-slate500">Type</label>
+          <select id="type" name="type" class="px-3 py-2 bg-slate500  rounded-md w-full " style="height: 40px;">
+            <option value="0" {% if form.s_types == 0 %}selected{% endif %}>
+              all
+            </option>
+            {% for type in types  %}
+            <option value="{{type.pk}}" {% if form.s_types == type.pk  %}selected{% endif %}>{{type}}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="flex flex-col items-start  col-span-2">
+          <label for="project_type" class="text-slate500">Project Type</label>
+          <select id="project_type" name="project_type" class="px-3 py-2 bg-slate500  rounded-md w-full " style="height: 40px;">
+            <option value="0" {% if form.s_project_types == 0 %}selected{% endif %}>all</option>
+            {% for project_type in project_types  %}
+            <option value="{{project_type.pk}}" {% if form.s_project_types == project_type.pk  %}selected{% endif %}>{{project_type}}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="flex flex-col items-start w-full">
+          <p class="text-slate500">CreatedAt</p>
+          <div class="grid grid-cols-2  w-full rounded-md overflow-hidden">
+            <label name="createdAt_id_sort_up" for="createdAt_id_sort_up" class="box-radio-input flex flex-col items-center ">
+              <input type="radio" name="createdAt" id="createdAt_id_sort_up" value='1' {% if form.createdAt == 1 %}checked{% endif %}>
+              <span>
+                <i class="bi bi-arrow-up"></i></span>
+            </label>
+            <label name="createdAt_id_sort_down" for="createdAt_id_sort_down" class="box-radio-input flex flex-col items-center">
+              <input type="radio" name="createdAt" id="createdAt_id_sort_down" value='0' {% if form.createdAt == 0 %}checked{% endif %}>
+              <span><i class=" bi bi-arrow-down"></i></span>
+            </label>
+          </div>
+        </div>
+        <div class="flex flex-col items-start">
+          <p class="text-slate500">Price</p>
+          <div class="grid grid-cols-2  w-full rounded-md overflow-hidden">
+            <label name="price_id_sort_up" for="price_id_sort_up" class="box-radio-input flex flex-col items-center ">
+              <input type="radio" name="price" id="price_id_sort_up" value='1' {% if form.price == 1 %}checked{% endif %}>
+              <span>
+                <i class="bi bi-arrow-up"></i></span>
+            </label>
+            <label name="price_id_sort_down" for="price_id_sort_down" class="box-radio-input flex flex-col items-center">
+              <input type="radio" name="price" id="price_id_sort_down" value='0' {% if form.price == 0 %}checked{% endif %}>
+              <span><i class=" bi bi-arrow-down"></i></span>
+            </label>
+          </div>
+
+        </div>
+        <div class="w-full flex flex-col items-center justify-end">
+          <button class="px-3 py-2 bg-slate500 w-full rounded-md" style="height: 40px;"><i class="bi bi-search"></i></button>
+        </div>
+      </form>
+      <!-- <form method="get" action="{% url "products:productList" %}">
         {{form.as_p}}
         <button>Search</button>
-      </form>
+      </form> -->
     </div>
   </div>
-  <section style="max-width:1200px;" class="grid w-full grid-cols-3 gap-24">
-    {% for product in products  %}
-    <div class="relative flex flex-col items-center justify-start col-span-1 overflow-hidden transition-transform duration-200 ease-in-out rounded-lg " style="width: 300px;height: 420px;">
-      <div id="fontCard" class="flex flex-col items-start w-full h-full">
-        <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
-          {% if product.image.content_type == "mp4" %}
-          <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer " style="height: 300px;width: 300px;">
-            <source src="{{product.image.file360.url}}" />
-          </video>
-          {% else %}
-          <img src="{{product.image.file360.url}}" style="height: 300px;width: 300px;" class="cursor-pointer " />
-          {% endif %}
-        </div>
-        <div class="flex flex-col items-start w-full p-3 bg-gray-200" style="height: 120px;width: 300px;">
-          <p class="text-xl font-bold line-clamp-1">{{product.title}}</p>
-          <div class="flex flex-row items-end justify-between w-full">
-            <div class="flex flex-col items-start">
-              <p class="">Reserve Price</p>
-              <p class="text-xl font-bold">{{product.price}} ETH</p>
-            </div>
-            <div class="flex flex-col items-center cursor-pointer">
-              <img src="{{product.author.avator.thumnail.url}}" style="width: 40px;height: 40px;" class="border-2 rounded-full border-primary" />
-              <p>{{product.author}}</p>
+  <section style="max-width:1200px;" class="mt-24">
+
+    {% if products.count > 0 %}
+
+    <div class="grid w-full grid-cols-5 gap-24 ">
+      {% for product in products  %}
+      <div class="relative flex flex-col items-center justify-start col-span-1 overflow-hidden transition-transform duration-200 ease-in-out rounded-lg " style="width: 300px;height: 420px;">
+        <div id="fontCard" class="flex flex-col items-start w-full h-full">
+          <div class="flex flex-col items-center justify-start w-full bg-white" id="card">
+            {% if product.image.content_type == "mp4" %}
+            <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer " style="height: 300px;width: 300px;">
+              <source src="{{product.image.file360.url}}" />
+            </video>
+            {% else %}
+            <img src="{{product.image.file360.url}}" style="height: 300px;width: 300px;" class="cursor-pointer " />
+            {% endif %}
+          </div>
+          <div class="flex flex-col items-start w-full p-3 bg-gray-200" style="height: 120px;width: 300px;">
+            <p class="text-xl font-bold line-clamp-1">{{product.title}}</p>
+            <div class="flex flex-row items-end justify-between w-full">
+              <div class="flex flex-col items-start">
+                <p class="">Reserve Price</p>
+                <p class="text-xl font-bold">{{product.price}} ETH</p>
+              </div>
+              <div class="flex flex-col items-center cursor-pointer">
+                <img src="{{product.author.avator.thumnail.url}}" style="width: 40px;height: 40px;" class="border-2 rounded-full border-primary" />
+                <p>{{product.author}}</p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div id="backCard" class="flex-col items-start justify-between hidden w-full h-full p-6 transition-all duration-200 ease-in-out opacity-0 cursor-pointer bg-primary">
-        <div class="flex flex-col items-start">
-          <p class="text-xl font-bold line-clamp-1">{{product.title}}</p>
-          <p class="mt-3 text-justify line-clamp-4">{{product.description}}</p>
+        <div id="backCard" class="flex-col items-start justify-between hidden w-full h-full p-6 transition-all duration-200 ease-in-out opacity-0 cursor-pointer bg-primary">
+          <div class="flex flex-col items-start">
+            <p class="text-xl font-bold line-clamp-1">{{product.title}}</p>
+            <p class="mt-3 text-justify line-clamp-4">{{product.description}}</p>
+          </div>
+          <a href="/product/{{product.id}}" class="px-6 py-2 bg-white text-primary">
+            more
+          </a>
         </div>
-        <a href="/product/{{product.id}}" class="px-6 py-2 bg-white text-primary">
-          more
-        </a>
       </div>
+      {% endfor %}
     </div>
-    {% endfor %}
+    {% else %}
+    <div class="col-span-5 flex flex-col items-center justify-center " style="min-height: 500px;">
+      <p class="text-primary">검색 결과가 없습니다.</p>
+    </div>
+    {% endif %}
+
+
   </section>
-  <h5>
+  <div class="col-span-5 flex flex-col items-center pb-12 text-white">
     {% if page_obj.has_previous %}
     <a href="?page={{page_obj.previous_page_number}}">Previous</a>
     {% endif %}
-
-    Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
+    <p>
+      Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
+    </p>
 
     {% if page_obj.has_next  %}
     <a href="?page={{page_obj.next_page_number}}">Next</a>
     {% endif %}
 
-  </h5>
+  </div>
   <script>
     const card = document.querySelectorAll("#card");
     card.forEach(function(cardWrap) {
