--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -239,17 +239,17 @@
   <div class="py-12" style="max-width: 1200px; ">
     <p class="text-white">YOU MAY ALSO LIKE</p>
 
-    <div id="image-slider" class=" splide">
+    <div id="image-slider" class="splide">
       <div class="w-full splide__track">
         <ul class="w-full splide__list">
           {% for otherProduct in otherProducts %}
           <li class="splide__slide">
             {% if otherProduct.image.content_type == "mp4" %}
-            <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer ">
+            <video autoplay muted loop poster="{{product.image.thumnail.url}}" class="object-cover cursor-pointer w-full h-auto">
               <source src="{{otherProduct.image.file360.url}}" />
             </video>
             {% else %}
-            <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer " />
+            <img src="{{otherProduct.image.file360.url}}" class="cursor-pointer w-full h-auto" />
             {% endif %}
           </li>
           {% endfor %}
@@ -265,11 +265,11 @@
         rewind: true,
         fixedWidth: 280,
         fixedHeight: 280,
-        gap: 10,
-        rewind: true,
-        pagination: false,
-        cover: true,
-        isNavigation: true,
+        // gap: 10,
+        // rewind: true,
+        // pagination: false,
+        // cover: true,
+        // isNavigation: true,
       }).mount();
     });
     const shareButton = document.querySelector('.share-button');
