--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -266,11 +266,11 @@
       rewind: true,
       fixedWidth: 280,
       fixedHeight: 280,
-      // gap: 10,
-      // rewind: true,
-      // pagination: false,
-      // cover: true,
-      // isNavigation: true,
+      gap: 10,
+      rewind: true,
+      pagination: false,
+      cover: true,
+      isNavigation: true,
     }).mount();
   });
   const shareButton = document.querySelector('.share-button');
