--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -236,10 +236,10 @@
 
   </div>
 
-  <div class="py-12" style="max-width: 1200px; ">
-    <p class="text-white">YOU MAY ALSO LIKE</p>
+  <div class="py-12 flex flex-col items-center" style="max-width: 1200px; ">
+    <p class="text-white text-lg ">YOU MAY ALSO LIKE</p>
 
-    <div id="image-slider" class="splide">
+    <div id="image-slider" class="splide mt-6">
       <div class="w-full splide__track">
         <ul class="w-full splide__list">
           {% for otherProduct in otherProducts %}
