--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -236,10 +236,10 @@
 
   </div>
 
-  <div class="py-12 flex flex-col items-center" style="max-width: 1200px; ">
+  <div class="py-12 flex flex-col items-center" style="width: 1200px; ">
     <p class="text-white text-lg ">YOU MAY ALSO LIKE</p>
 
-    <div id="image-slider" class="splide mt-6">
+    <div id="image-slider" class="splide mt-6 w-full">
       <div class="w-full splide__track">
         <ul class="w-full splide__list">
           {% for otherProduct in otherProducts %}
@@ -261,6 +261,7 @@
 </div>
 <script>
   document.addEventListener('DOMContentLoaded', function() {
+
     new Splide('#image-slider', {
       perPage: 3,
       rewind: true,
@@ -272,35 +273,33 @@
       cover: true,
       isNavigation: true,
     }).mount();
+
+    const shareButton = document.querySelector('.share-button');
+    const shareDialog = document.querySelector('.share-dialog');
+    const openseaBtn = document.querySelector('.openseaBtn');
+    const openseaBtnDialog = document.querySelector('.openseaBtn-dialog');
+    openseaBtn.addEventListener('click', event => {
+      openseaBtnDialog.classList.add('is-open');
+    });
+    shareButton.addEventListener('click', event => {
+      shareDialog.classList.add('is-open');
+    });
+
+    $('html').click(function(e) {
+      if ($(e.target).parents('.base').length < 1) {
+
+        shareDialog.classList.remove('is-open');
+      }
+
+    })
+    $('html').click(function(e) {
+
+      if ($(e.target).parents('.outside').length < 1) {
+
+        openseaBtnDialog.classList.remove('is-open');
+      }
+    })
   });
-  const shareButton = document.querySelector('.share-button');
-  const shareDialog = document.querySelector('.share-dialog');
-
-  const openseaBtn = document.querySelector('.openseaBtn');
-  const openseaBtnDialog = document.querySelector('.openseaBtn-dialog');
-
-  openseaBtn.addEventListener('click', event => {
-    openseaBtnDialog.classList.add('is-open');
-  });
-  shareButton.addEventListener('click', event => {
-    shareDialog.classList.add('is-open');
-  });
-
-
-  $('html').click(function(e) {
-    if ($(e.target).parents('.base').length < 1) {
-
-      shareDialog.classList.remove('is-open');
-    }
-
-  })
-  $('html').click(function(e) {
-
-    if ($(e.target).parents('.outside').length < 1) {
-
-      openseaBtnDialog.classList.remove('is-open');
-    }
-  })
 </script>
 
 
