--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -237,9 +237,9 @@
   </div>
 
   <p class="text-white text-lg mt-6">YOU MAY ALSO LIKE</p>
-  <div class="py-12 flex flex-col items-center " style="max-width: 1200px; ">
+  <div class="py-12 flex flex-col items-center " style="width:1200px;">
 
-    <div id="image-slider" class="splide">
+    <div id="image-slider" class="splide w-full">
       <div class="w-full splide__track">
         <ul class="w-full splide__list">
           {% for otherProduct in otherProducts %}
